<resources>
    <string name="app_name">BodyBoost</string>
    <string name="st_sub_title">Nice to meet you, come join our community!
        <br><b>Login</b> if you already have an account</br>
        <br><b>Register</b> to get started with app</br>
</string>
    <string name="st_title">Hello!</string>
    <string name="ill_img">ill_img</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Login to app</string>
    <string name="Login_sub_title">
        <font color="#5A72BB"><b>Login</b></font> if you already have an account.
    </string>
    <string name="login_email">Your email</string>
    <string name="login_password">Your password</string>
    <string name="login_forgot_pw">Forgot Password?</string>
    <string name="login_havent_account">
        I don\'t have an account <font color="#5A72BB"><b>Register</b></font>
    </string>
    <string name="register_title">Create an account</string>
    <string name="register_sub_title">
        <font color="#5A72BB"><b>Register</b></font> to get started with app.
    </string>
    <string name="register_email">Your email</string>
    <string name="register_username">Your username</string>
    <string name="register_password">Your password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_btn">REGISTER</string>
    <string name="register_have_account">
        I already have an account <font color="#5A72BB"><b>Login</b></font>
    </string>
    <string name="home_title">Hello!</string>
    <string name="home_sub_title">Welcom to home</string>
    <string name="water_prof">Water</string>
    <string name="pills_prof">Pills</string>
    <string name="pills_profile">pills</string>
    <string name="food_prof">Food</string>
    <string name="kcal_prof">kcal</string>
    <string name="count_kcal">0</string>
    <string name="sleep_prof">Sleep</string>
    <string name="count_sleep">0</string>
    <string name="hours_prof">hours</string>
    <string name="ml_prof">ml</string>
    <string name="count_water">0</string>
    <string name="count_pills">0</string>
    <string name="pose1">    Step 1:- Stand up straight and bend your arms without clenching your hands into fists.\n\n
                             Step 2:- Start walking rhythmically, shifting from foot to foot. Set the rhythm with your hands, move at a comfortable, but fast enough pace to properly stretch your muscles and joints \n\n
                             Step 3:- Do not raise your knees too high, but do not take small steps either. \n\n
                             Step 4:- Move rhythmically at your own pace.\n\n
                             Step 5:- Walking in place is a mandatory part of the training program for people with obesity, as it has no contraindications, is easy to perform and effectively trains the cardiovascular system. \n\n
                             How much to do: 15-20 steps on each side.\n\n</string>
    <string name="pose2">    Step 1:- From a standing position, legs together, bend your elbows and lift them up in front of you, bringing them together.\n\n
                             Step 2:- Now take a step to the right, spreading your elbows to the sides. Then bring your hands together and put your legs together, returning to the starting position. \n\n
                             Step 3:- Now take a step to the left, again spreading your arms to the sides. Move at a rhythmic pace, spreading your arms in sync with the movement of your legs. \n\n
                             Step 4:- An excellent exercise at home for overweight people, which speeds up the metabolism and helps to lose weight.\n\n
                             How much to do: 20-25 hand raises.\n\n</string>
    <string name="pose3">    Step 1:- Place your feet slightly wider than your shoulders, place your hands behind your back, you can join your palms. \n\n
                             Step 2:- Now shift the weight of the body to the right leg, bending the left knee, trying to touch the back of the thigh with the heel.\n\n
                             Step 3:- Then shift your body weight to the left leg, repeating the movements of the right leg. Rhythmically shift from foot to foot, performing a shin loop, which will help you not only stretch your muscles, but also activate blood flow, which stimulates weight loss and fat burning.\n\n
                             How much to do: 15-20 overlaps on each side.\n\n
                             </string>
    <string name="pose4">    Step 1:- From a standing position, feet together, arms along the body, take a wide step to the right, raising your arms through your sides up \n\n
                             Step 2:- Return to the starting position by lowering your arms and putting your feet together.\n\n
                             Step 3:- Then repeat on the other side.\n\n
                             Step 4:- Perform the exercise at a fast, but comfortable pace, moving synchronously and rhythmically.\n\n
                             Step 5:- An effective exercise for overweight people at home will help speed up the metabolism, dispersing the blood and saturating the cells of the body with oxygen, which activates the breakdown of fats and contributes to the loss of extra pounds.\n\n
                             How much to do: 20-25 hand raises.\n\n
                             </string>
    <string name="pose5">   Step 1:- Stand straight, feet shoulder width apart. Bend your elbows and point your palms down \n\n
                             Step 2:- Now take a step in place with your right foot, raising your knee high and trying to touch your palm.\n\n
                             Step 3:- Then take the same step with your left foot.\n\n
                             Step 4:- Walk at a comfortable pace, trying to raise your knees as high as possible.\n\n
                             Step 5:- A simple but effective cardio exercise strengthens the muscles of the legs, stimulates weight loss and fits perfectly into a workout , as it has no contraindications.\n\n
                             How much to do: 15-20 knee lifts on each side.\n\n
                            </string>
    <string name="pose6">    Step 1:- From a standing position, feet shoulder-width apart, raise your arms up and bend them at the elbows. \n\n
                             Step 2:- Spread your elbows out to the sides, pointing your palms forward.\n\n
                             Step 3:- Now rhythmically raise your arms up, straightening them, and then return to the starting position with your elbows bent at a right angle. At the top point, do not straighten your elbows completely so as not to injure the joints.\n\n
                             Step 4:- Spread your elbows out to the sides, pointing your palms forward.\n\n
                             How much to do: 20-25 arm raises.\n\n</string>
    <string name="pose7">    Step 1:- Put your feet slightly wider than your shoulders, bend your arms at the elbows and place them in front of you parallel to the body, lower your palms down.\n\n
                             Step 2:- Shift your body weight to the right leg, and bend the left at the knee, trying to touch the heel to the back of the thigh.\n\n
                             Step 3:- At the same time, spread your elbows to the sides, bringing the shoulder blades together.\n\n
                             Step 4:- Then shift your body weight to your left leg and repeat the movement.\n\n
                             Step 5:- Perform the exercise rhythmically, synchronizing the actions of the hands with the movement of the legs.\n\n
                             Step 6:- This exercise is suitable for weight loss with a weight of 100 kg or more, as it involves the top and bottom of the body without loading the joints.\n\n
                            How much to do: 20-25 hand raises.\n\n
                             </string>
    <string name="pose8">    Step 1:- Stand straight, feet shoulder-width apart, put your hands on your belt. Raise your right hand up and lean to the left.\n\n
                             Step 2:- Return to the starting position and raise your left hand, leaning to the right.\n\n
                             Step 3:- Perform tilts with full amplitude, feeling the tension in the side of the body \n\n
                             Step 4:- A simple exercise for overweight people is easy to do at home, as it does not require physical fitness. Tilts strengthen the core and abs muscles, stretch the spine, and develop overall strength and flexibility of the body.\n\n
                             How much to do: 10-15 tilts on each side.\n\n
                            </string>
    <string name="pose9">    Step 1:- Stand with your feet shoulder-width apart, bend your arms at the elbows, clench your palms into fists \n\n
                             Step 2:- Make a boxing stance - hands are almost pressed to the body, legs are slightly bent at the knees.\n\n
                             Step 3:- Now turn your body to the left, vigorously punching with your right hand, as if on a punching bag.\n\n
                             Step 4:- Without returning to the starting position, turn to the right, making a blow with your left hand. \n\n
                             Step 5:- During each turn, bounce a little at the knees, helping yourself to punch in each direction. An excellent exercise for obese people at home activates metabolic processes, strengthens the arms, body and tone the muscles of the legs. \n\n
                             How much to perform: 15-20 strokes on each side.\n\n
                            </string>
    <string name="pose10">   Step 1:- Stand up straight, put your feet shoulder-width apart. Place one palm on top of the other and raise your arms up. \n\n
                             Step 2:- Now rhythmically raise your knees in turn, slightly diagonally. At the same time, lower your hands and try to touch your knees with your palms. \n\n
                             Step 3:- Perform the exercise at a fast pace, synchronously and harmoniously, without losing the rhythm.\n\n
                             Step 4:- Exercise pumps not only the heart muscle, but also the legs, core and arms, helping to get rid of extra pounds.\n\n
                             How much to do: 25-30 lowering hands to the knees.\n\n
                            </string>
    <string name="f1">    Step 1:- Take a classic stance, but put your feet tightly together, and your arms along the body.\n\n
                             Step 2:- Perform two movements together: in a jump, spread your legs wide and stretch your arms up, bringing them together above your head. \n\n
                             Step 3:- Jump back to the pose from the beginning of the exercise. Do not pause between adduction and extension of the legs. \n\n
                             Step 4:- One of the most popular cardio exercises and most often the start of any intense fat burning program.\n\n
                             </string>
    <string name="daily_goal_2000_ml">Daily Goal: 2000 ml</string>
    <string name="consumed">Consumed: 0 ml</string>
    <string name="add_50ml">Add 50ml</string>
    <string name="add_100ml">Add 100ml</string>
    <string name="add_150ml">Add 150ml</string>
    <string name="add_200ml">Add 200ml</string>
    <string name="delete_entry">Delete Entry</string>
</resources>