<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvDailyGoal"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/daily_goal_2000_ml"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="243dp"
        android:layout_height="238dp"
        android:max="2000"
        android:progress="0"
        android:progressDrawable="@drawable/circular_progress_bar" />

    <TextView
        android:id="@+id/tvPercentage"
        android:layout_width="92dp"
        android:layout_height="59dp"
        android:layout_marginTop="18sp"
        android:gravity="center"
        android:orientation="vertical"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvConsumedWater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consumed"
        android:textSize="20sp"
        android:textColor="@color/grey"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd50ml"
            android:layout_width="159dp"
            android:layout_height="82dp"
            android:layout_margin="5dp"
            android:text="@string/add_50ml" />

        <Button
            android:id="@+id/btnAdd100ml"
            android:layout_width="159dp"
            android:layout_height="82dp"
            android:layout_margin="5dp"
            android:text="@string/add_100ml" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd150ml"
            android:layout_width="159dp"
            android:layout_height="82dp"
            android:layout_margin="5dp"
            android:text="@string/add_150ml" />

        <Button
            android:id="@+id/btnAdd200ml"
            android:layout_width="159dp"
            android:layout_height="82dp"
            android:layout_margin="5dp"
            android:text="@string/add_200ml" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp">

    </LinearLayout>

    <Button
        android:id="@+id/btnDeleteEntry"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/delete_entry" />

</LinearLayout>
